tests/desugar/should_fail/timed_link_parallel.csp
channel a, b
channel tock

Timed (\_ @ 1) {
    procTest1 = STOP [a <-> b] STOP
}
